hphp/test/zend/good/Zend/tests/closure_033.php.expectf
Test::{closure}()

Fatal error: Call to private Test::func() from invalid context in %s/closure_033.php on line 18
